<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ToDo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_task_list">Task list</string>
    <string name="title_activity_add_task">Add task</string>

    <!-- Layouts strings -->
    <string name="closestTaskString">Closest Task</string>

    <!-- Buttons strings -->
    <string name="taskListButtonString">Task List</string>
    <string name="addTaskButtonString">Add Task</string>
    <string name="exitButtonString">Exit</string>
    <string name="mainManuButtonString">Main Menu</string>
    <string name="datePickButtonString">Choose</string>
    <string name="deleteAllButtonString">Delete all</string>
    <string name="deleteTaskButtonStringButton">Delete</string>

    <!-- Labels strings -->
    <string name="addTaskTopicLabelString">Task</string>
    <string name="addTaskDateLabelString">Date</string>


</resources>
