<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainMenu"
    android:orientation="vertical"
    style="@style/basicStyle">

    <TextView
        android:id="@+id/currentDate"
        android:text="Current Date"
        style="@style/currentDateStyle"/>

    <include layout="@layout/closest_task_layout"/>

    <Button
        android:id="@+id/taskListButton"
        android:text="@string/taskListButtonString"
        style="@style/buttonStyle" />

    <Button
        android:id="@+id/addTaskButton"
        android:text="@string/addTaskButtonString"
        style="@style/buttonStyle" />

    <Button
        android:id="@+id/exitButton"
        android:text="@string/exitButtonString"
        style="@style/buttonStyle" />

</LinearLayout>
