<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="#000000"
    tools:context="mayon.org.todo.AddTask">

    <TextView android:id="@+id/addTaskTopic"
        android:text="@string/title_activity_add_task"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        style="@style/addTaskTopic"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="@style/addTaskRowStyle">

        <TextView android:id="@+id/addTaskFormTopicLabel"
            android:text="@string/addTaskTopicLabelString"
            style="@style/addTaskLabelStyle"/>

        <EditText android:id="@+id/addTaskFormEditText"
            style="@style/addTaskEditTextStyle"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        style="@style/addTaskRowStyle">

        <TextView android:id="@+id/addTaskDateLabel"
            android:text="@string/addTaskDateLabelString"
            style="@style/addTaskLabelStyle"/>

        <EditText android:id="@+id/addTaskDate"
            android:focusable="false"
            style="@style/addTaskEditTextStyle" />

    </LinearLayout>

    <TextView android:id="@+id/errorAddTaskTopicLabel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible" />

    <TextView android:id="@+id/errorAddTaskDateLabel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible" />

    <Button android:id="@+id/dataPickButton"
        android:text="@string/addTaskButtonString"
        style="@style/buttonStyle" />

</LinearLayout>
